# trac_ik

./: .gitignore  README.md
trac_ik/: CHANGELOG.rst
trac_ik_examples/: CMakeLists.txt
trac_ik_kinematics_plugin/: CMakeLists.txt  package.xml  trac_ik_plugin_description.xml
trac_ik_kinematics_plugin/include/trac_ik/: trac_ik_kinematics_plugin.hpp
trac_ik_kinematics_plugin/src/: trac_ik_kinematics_plugin.cpp
trac_ik_lib/: CMakeLists.txt
