<?xml version="1.0"?>
<package format="3">
  <name>trac_ik_kinematics_plugin</name>
  <version>1.6.6</version>
  <description>A MoveIt! Kinematics plugin using TRAC-IK</description>
  <author>Patrick Beeson</author>
  <maintainer email="robotics@traclabs.com">TRACLabs Robotics</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>moveit_common</build_depend>

  <depend>moveit_core</depend>
  <depend>class_loader</depend>
  <depend>pluginlib</depend>
  <depend>eigen</depend>
  <depend>tf2</depend>
  <depend>tf2_kdl</depend>
  <depend>orocos_kdl</depend>
  <depend>moveit_msgs</depend>
  <depend>trac_ik_lib</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <moveit_core plugin="${prefix}/trac_ik_plugin_description.xml"/>
  </export>
</package>
